[gd_scene load_steps=3 format=2]

[ext_resource path="res://Scripts/Attack.gd" type="Script" id=1]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 2, 30 )

[node name="Attack" type="Area2D"]
script = ExtResource( 1 )
color = Color( 1, 0.172549, 0.172549, 1 )

[node name="Timer" type="Timer" parent="."]
wait_time = 0.1
one_shot = true
autostart = true

[node name="AttackShape" type="CollisionShape2D" parent="."]
position = Vector2( 0, -30 )
shape = SubResource( 1 )
one_way_collision_margin = 2.0

[connection signal="body_entered" from="." to="." method="_on_Attack_body_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
